bug fixes with integration with user service
